--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -1,4 +1,18 @@
-.product__grid {
-  display: grid;
-  grid-template-columns: repeat(2, 1fr);
+.products__container {
+  h1 {
+    text-align: center;
+    color: #515151;
+
+    margin-top: 2rem;
+  }
+
+  .product__grid {
+    // display: grid;
+    // grid-template-columns: repeat(3, 1fr);
+
+    display: flex;
+    flex-wrap: wrap;
+
+    margin: 4rem 2rem;
+  }
 }
