--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -4,7 +4,8 @@
   display: flex;
   justify-content: center;
   background: white;
-  margin: 10px auto;
+  border-radius: 10px;
+  margin: 15px 5px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   transition: all 0.3s;
 
@@ -14,7 +15,7 @@
   }
 
   .photo {
-    padding: 30px;
+    padding: 10px;
     width: 45%;
     text-align: center;
     float: left;
@@ -52,7 +53,7 @@
 
     p {
       font-size: 12px;
-      line-height: 10px;
+      line-height: 20px;
       color: #727272;
       padding: 10px 0;
       margin: 0;
