--- a/src/components/Cart/CartItem/CartItem.module.scss
+++ b/src/components/Cart/CartItem/CartItem.module.scss
@@ -1,9 +1,57 @@
 .cartitem__container {
   display: flex;
-}
 
-.image__container {
-  img {
-    width: 10rem;
+  /* margin: 1rem 0; */
+  margin-top: 1rem;
+  margin-bottom: 2rem;
+
+  /* box-shadow: 0 2px 8px rgba(0, 0, 0, 0.26);
+  background-color: white;
+  border-radius: 10px; */
+
+  .image__container {
+    margin-right: 1rem;
+    img {
+      width: 10rem;
+      border-radius: 10px;
+    }
+  }
+
+  .input__container {
+    display: flex;
+
+    .input__label {
+      /* margin-top: 1.3rem; */
+      margin: 1.3rem 1rem;
+
+      label {
+        margin-right: 0.3rem;
+      }
+    }
+
+    button {
+      outline: 0;
+      border: 0;
+      background: none;
+      border: 2px solid #d9d9d9;
+      padding: 8px 0px;
+      margin-top: 1rem;
+      margin-bottom: 10px;
+      color: #515151;
+      text-transform: uppercase;
+      width: 115px;
+      font-family: inherit;
+      margin-right: 5px;
+      transition: all 0.5s ease;
+      font-weight: 700;
+      border-radius: 5px;
+
+      &:hover {
+        // background: darken(white, 2%);
+        border: 2px solid red;
+        color: red;
+        cursor: pointer;
+      }
+    }
   }
 }
