--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -36,19 +36,22 @@
     h1 {
       color: #515151;
       font-weight: 300;
-      padding-top: 15px;
+
       margin: 0;
       font-size: 24px;
-      font-weight: 300;
     }
 
     h2 {
       color: #515151;
-      margin: 0;
+      /* margin: 0; */
       text-transform: uppercase;
       font-weight: 500;
       font-size: 14px;
       text-align: center;
+      width: 200px;
+      overflow: hidden;
+      height: 80px;
+      line-height: 20px;
     }
 
     p {
