--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -1,3 +1,4 @@
+@import "../../styles/variables.scss";
 .cart__container {
   display: flex;
   justify-content: space-between;
@@ -5,6 +6,8 @@
 
   max-width: 90rem;
   margin: 4rem auto;
+
+  animation: fadeIn 0.5s;
 
   h1 {
     margin-left: 22rem;
@@ -14,6 +17,8 @@
   .cart__item__container {
     flex: 0.7;
     margin-right: 1rem;
+
+    animation: bottomToTop 0.4s;
   }
 
   .cart__info {
