--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -1,6 +1,6 @@
-.header {
-  /* background-color: aqua; */
+@import "../../styles/variables.scss";
 
+.header {
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -12,6 +12,14 @@
   .logo {
     font-size: 30px;
     font-weight: 500;
+
+    span {
+      color: #aedaa6;
+
+      span:hover {
+        animation: bounce 1s ease infinite;
+      }
+    }
   }
 
   nav {
@@ -24,6 +32,20 @@
     li {
       display: inline-block;
       padding: 0 2.2rem;
+
+      a {
+        box-shadow: inset 0 0 0 0 #aedaa6;
+        color: black;
+        margin: 0 -0.25rem;
+        padding: 0 0.25rem;
+        transition: color 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
+        border-radius: 4px;
+      }
+
+      a:hover {
+        box-shadow: inset 100px 0 0 0 #aedaa6;
+        color: white;
+      }
     }
   }
   a {
@@ -35,7 +57,7 @@
 
 .header__wrapper {
   /* background-color: #222; */
-  border-bottom: 1px solid #ddd;
+  border-bottom: 1px solid #aedaa6;
 
   /* position: fixed;
   top: 0;
