--- a/src/components/Products/ProductPage/ProductPage.module.scss
+++ b/src/components/Products/ProductPage/ProductPage.module.scss
@@ -1,7 +1,11 @@
+@import "../../../styles/variables.scss";
+
 .productpage__container {
   display: flex;
   justify-content: center;
   align-items: center;
+
+  animation: fadeIn 0.7s;
 
   max-width: 70rem;
   max-height: 30rem;
@@ -22,6 +26,8 @@
 
   .product__info {
     margin-left: 3rem;
+
+    animation: rightToLeft 0.4s;
 
     h1 {
       margin: 1rem 0;
@@ -59,3 +65,33 @@
     }
   }
 }
+
+/* @keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes rightToLeft {
+  from {
+    transform: translateX(3rem);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes bottomToTop {
+  from {
+    transform: translateY(3rem);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+} */
