--- a/src/styles/variables.scss
+++ b/src/styles/variables.scss
@@ -3,3 +3,57 @@
 
 $ubuntu-font: "Ubuntu", sans-serif;
 $poppins-font: "Poppins", sans-serif;
+
+@keyframes fadeIn {
+  from {
+    opacity: 0;
+  }
+
+  to {
+    opacity: 1;
+  }
+}
+
+@keyframes rightToLeft {
+  from {
+    transform: translateX(3rem);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes bottomToTop {
+  from {
+    transform: translateY(1rem);
+  }
+
+  to {
+    transform: translateX(0);
+  }
+}
+
+@keyframes bounce {
+  0% {
+    transform: scale(1, 1) translateY(0);
+  }
+  10% {
+    transform: scale(1.1, 0.9) translateY(0);
+  }
+  30% {
+    transform: scale(0.9, 1.1) translateY(-55px);
+  }
+  50% {
+    transform: scale(1.05, 0.95) translateY(0);
+  }
+  58% {
+    transform: scale(1, 1) translateY(-7px);
+  }
+  65% {
+    transform: scale(1, 1) translateY(0);
+  }
+  100% {
+    transform: scale(1, 1) translateY(0);
+  }
+}
