--- a/src/components/Products/ProductPage/ProductPage.module.scss
+++ b/src/components/Products/ProductPage/ProductPage.module.scss
@@ -38,6 +38,10 @@
 
       .input__label {
         margin: 1.2rem 1rem;
+
+        label {
+          margin-right: 0.3rem;
+        }
       }
 
       button {
@@ -65,33 +69,3 @@
     }
   }
 }
-
-/* @keyframes fadeIn {
-  from {
-    opacity: 0;
-  }
-
-  to {
-    opacity: 1;
-  }
-}
-
-@keyframes rightToLeft {
-  from {
-    transform: translateX(3rem);
-  }
-
-  to {
-    transform: translateX(0);
-  }
-}
-
-@keyframes bottomToTop {
-  from {
-    transform: translateY(3rem);
-  }
-
-  to {
-    transform: translateX(0);
-  }
-} */
