--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -29,6 +29,11 @@
       display: inline-block;
       padding: 0 2.2rem;
 
+      @include md {
+        display: block;
+        padding: 0 0;
+      }
+
       a {
         box-shadow: inset 0 0 0 0 #aedaa6;
         color: black;
