--- a/src/components/HomePage/Home.module.scss
+++ b/src/components/HomePage/Home.module.scss
@@ -1,3 +1,5 @@
+@import "../../styles/variables.scss";
+
 .home__main {
   /* display: flex; */
   display: flex;
@@ -28,12 +30,18 @@
     justify-content: center;
 
     max-width: 70rem;
+    padding: 0 1rem;
 
     h1 {
       font-size: 40px;
       font-weight: 700;
 
       padding: 5rem 5rem;
+
+      @include md {
+        font-size: 30px;
+        padding: 5rem 1.5rem;
+      }
     }
   }
 }
