--- a/src/components/Products/Product/Product.module.scss
+++ b/src/components/Products/Product/Product.module.scss
@@ -1,3 +1,5 @@
+@import "../../../styles/variables.scss";
+
 .card {
   width: 450px;
   height: 220px;
@@ -8,6 +10,11 @@
   margin: 15px 5px;
   box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
   transition: all 0.3s;
+
+  @include sm {
+    width: 390px;
+    height: 170px;
+  }
 
   &:hover {
     box-shadow: 0 8px 17px 0 rgba(0, 0, 0, 0.2),
@@ -39,6 +46,10 @@
 
       margin: 0;
       font-size: 24px;
+
+      @include sm {
+        font-size: 20px;
+      }
     }
 
     h2 {
@@ -52,6 +63,13 @@
       overflow: hidden;
       height: 80px;
       line-height: 20px;
+
+      @include sm {
+        font-size: 12px;
+        width: 150px;
+        height: 60px;
+        margin: 0 1rem;
+      }
     }
 
     p {
@@ -64,6 +82,10 @@
       text-overflow: ellipsis;
       white-space: nowrap;
       overflow: hidden;
+
+      @include sm {
+        display: none;
+      }
     }
 
     button {
@@ -81,8 +103,13 @@
       transition: all 0.3s ease;
       font-weight: 500;
 
+      @include sm {
+        width: 90px;
+        /* height: 40px; */
+        padding: 0 0;
+      }
+
       &:hover {
-        // background: darken(white, 2%);
         border: 1px solid #aedaa6;
         color: #aedaa6;
         cursor: pointer;
@@ -94,6 +121,10 @@
       font-weight: 500;
       color: #515151;
       margin-left: 0.75rem;
+
+      @include sm {
+        margin-top: 4rem;
+      }
     }
 
     input {
