--- a/src/components/Products/Products.module.scss
+++ b/src/components/Products/Products.module.scss
@@ -4,11 +4,13 @@
   animation: fadeIn 0.4s;
   h1 {
     text-align: center;
-
     font-size: 40px;
-    // color: #515151;
-
     margin-top: 2rem;
+
+    @include sm {
+      font-weight: 500;
+      font-size: 32px;
+    }
   }
 
   .product__grid {
