--- a/src/components/Cart/Cart.module.scss
+++ b/src/components/Cart/Cart.module.scss
@@ -11,6 +11,7 @@
 
   @include sm {
     display: block;
+    /* justify-content: center; */
   }
 
   h1 {
@@ -21,8 +22,14 @@
   .cart__item__container {
     flex: 0.7;
     margin-right: 1rem;
+    margin-left: 1rem;
 
     animation: bottomToTop 0.4s;
+
+    @include sm {
+      justify-content: center;
+      align-items: center;
+    }
   }
 
   .cart__info {
