--- a/src/components/AdminPage/ProductAdmin/ProductAdmin.module.scss
+++ b/src/components/AdminPage/ProductAdmin/ProductAdmin.module.scss
@@ -13,13 +13,36 @@
   &__container {
     display: flex;
     justify-content: space-between;
-    padding: 0.4rem;
-    margin: 0.5rem auto;
+    padding: 0.6rem 0.5rem;
+    margin: 1rem auto;
     max-width: 1000px;
 
-    border: 1px solid black;
+    box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
+    border-radius: 5px;
 
     color: black;
     text-decoration: none;
+
+    button {
+      outline: 0;
+      border: 0;
+      background: none;
+      border: 1px solid #000;
+      border-radius: 4px;
+      padding: 5px 0px;
+      color: #000;
+      text-transform: uppercase;
+      width: 80px;
+      font-family: inherit;
+      margin-right: 5px;
+      transition: all 0.3s ease;
+      font-weight: 500;
+
+      &:hover {
+        border: 1px solid red;
+        color: red;
+        cursor: pointer;
+      }
+    }
   }
 }
