--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -54,6 +54,27 @@
     /* color: white; */
     color: black;
   }
+
+  button {
+    outline: 0;
+    border: 0;
+    background: #333;
+    /* border: 1px solid #000; */
+    border-radius: 4px;
+    padding: 5px 0px;
+    /* margin-bottom: 10px; */
+    color: #aedaa6;
+    text-transform: uppercase;
+    width: 80px;
+    font-family: inherit;
+    margin-right: 5px;
+    transition: all 0.3s ease;
+    font-weight: 500;
+
+    &:hover {
+      cursor: pointer;
+    }
+  }
 }
 
 .header__wrapper {
