--- a/src/components/AccountPage/AccountPage.module.scss
+++ b/src/components/AccountPage/AccountPage.module.scss
@@ -13,6 +13,22 @@
     }
   }
 
+  input {
+    width: 90%;
+    height: 2.5em;
+
+    background: rgba(144, 144, 144, 0.075);
+    border: solid 2px #dee1e3;
+    border-radius: 5px;
+
+    font-size: 14px;
+
+    &:focus {
+      outline: none;
+      border: solid 2px #aedaa6;
+    }
+  }
+
   .flextest {
     display: flex;
     justify-content: center;
@@ -42,6 +58,8 @@
       border: 0;
       background: none;
       border: 1px solid #000;
+      border-radius: 5px;
+
       padding: 8px 0px;
       margin-bottom: 10px;
       color: #000;
